Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <div class="app-shell">
     <div id="login-screen">
         <div class="logo-supreme">Absensi Karyawan NKMJ</div>
-        <p style="color: #64748B; margin-top: -10px; font-weight: 600; margin-bottom: 40px;">Silahkan Pilih Cabang Yang Sesuai Lokasi</p>
+        <p style="color: #64748B; margin-top: -10px; font-weight: 600; margin-bottom: 40px;">Silahkan Pilih Cabang Sesuai Lokasi</p>
         
         <div class="login-card">
             <p style="text-align: left; font-size: 11px; font-weight: 800; color: var(--primary); margin: 0 0 10px 5px; text-transform: uppercase; letter-spacing: 1px;">Konfirmasi Lokasi Tugas</p>
@@ -241,3 +241,4 @@
 </body>
 
 </html>
+
