Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         { n: "Kuningan", lat: -6.223842, lng: 106.827367 },
         { n: "Bangka", lat: -6.245844, lng: 106.818456 },
         { n: "Kebagusan", lat: -6.305139, lng: 106.829111 },
-        { n: "Pejaten", lat: -6.275817, lng: 106.825864 }
+        { n: "Pejaten", lat: -6.2775156, lng: 106.8251544 }
     ];
 
     let userLat, userLng, selectedBranch, distance = Infinity;
@@ -241,6 +241,7 @@
 </body>
 
 </html>
+
 
 
 
