Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         { n: "THB", lat: -6.197931, lng: 106.994514 },
         { n: "Tanjung Duren", lat: -6.185732, lng: 106.764585 },
         { n: "Tanah Abang", lat: -6.173819, lng: 106.818806 },
-        { n: "Kuningan", lat: -6.223842, lng: 106.827367 },
+        { n: "Kuningan", lat: 6.2236892, lng: 106.820841 },
         { n: "Bangka", lat: -6.245844, lng: 106.818456 },
         { n: "Kebagusan", lat: -6.305139, lng: 106.829111 },
         { n: "Pejaten", lat: -6.2775156, lng: 106.8251544 }
@@ -241,6 +241,7 @@
 </body>
 
 </html>
+
 
 
 
