--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
         { n: "THB", lat: -6.197931, lng: 106.994514 },
         { n: "Tanjung Duren", lat: -6.185732, lng: 106.764585 },
         { n: "Tanah Abang", lat: -6.173819, lng: 106.818806 },
-        { n: "Kuningan", lat: 6.2236892, lng: 106.820841 },
+        { n: "Kuningan", lat: -6.2240561, lng: 106.8256942 },
         { n: "Bangka", lat: -6.245844, lng: 106.818456 },
         { n: "Kebagusan", lat: -6.305139, lng: 106.829111 },
-        { n: "Pejaten", lat: -6.2775156, lng: 106.8251544 }
+        { n: "Pejaten", lat: -6.275817, lng: 106.825864 }
     ];
 
     let userLat, userLng, selectedBranch, distance = Infinity;
@@ -196,7 +196,7 @@
     }
 
     function takeSnapshot() {
-        if(distance > 100) return alert("Akses Ditolak! Anda berada di luar radius cabang.");
+        if(distance > 300) return alert("Akses Ditolak! Anda berada di luar radius cabang.");
         
         const canvas = document.getElementById('canvas');
         const video = document.getElementById('video');
@@ -241,6 +241,7 @@
 </body>
 
 </html>
+
 
 
 
