--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     const CABANG = [
         { n: "Cabang Baru", lat: -6.3276026, lng: 106.8467117 },
-        { n: "Tebet", lat: -6.245844, lng: 106.818456 },
+        { n: "Gandaria", lat: -6.244300, lng: 106.784200 },
         { n: "Kelapa Gading", lat: -6.155822, lng: 106.903845 },
         { n: "Sunter", lat: -6.155452, lng: 106.877045 },
         { n: "Jatinegara", lat: -6.215286, lng: 106.868778 },
@@ -241,6 +241,7 @@
 </body>
 
 </html>
+
 
 
 
