--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <select id="select-cabang" class="input-supreme"></select>
             <button class="shutter-btn" style="width: 100%; margin: 10px 0 0;" onclick="login()">MULAI KERJA</button>
         </div>
-        <p style="font-size: 12px; color: #94A3B8; margin-top: 30px;">© RakaDimas || 2026 Mak Judes Group Management</p>
+        <p style="font-size: 12px; color: #94A3B8; margin-top: 30px;">©2026 Mak Judes Group Management</p>
     </div>
 
     <div id="main-app">
@@ -241,6 +241,7 @@
 </body>
 
 </html>
+
 
 
 
