--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         { n: "Tanah Abang", lat: -6.173819, lng: 106.818806 },
         { n: "Kuningan", lat: -6.2240561, lng: 106.8256942 },
         { n: "Bangka", lat: -6.245844, lng: 106.818456 },
-        { n: "Kebagusan", lat: -6.3215941, lng: 106.8044483 },
+        { n: "Kebagusan", lat: -6.3061726, lng: 106.835727 },
         { n: "Pejaten", lat: -6.275817, lng: 106.825864 }
     ];
 
@@ -241,6 +241,7 @@
 </body>
 
 </html>
+
 
 
 
