--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         { n: "Cabang Baru", lat: -6.1829067, lng: 106.8692036 },
         { n: "Gandaria", lat: -6.244300, lng: 106.784200 },
         { n: "Kelapa Gading", lat: -6.155822, lng: 106.903845 },
-        { n: "Sunter", lat: -6.155452, lng: 106.877045 },
+        { n: "Sunter", lat: -6.1575783, lng: 106.8701551 },
         { n: "Jatinegara", lat: -6.215286, lng: 106.868778 },
         { n: "Mangga Besar", lat: -6.147256, lng: 106.825633 },
         { n: "THB", lat: -6.197931, lng: 106.994514 },
@@ -241,6 +241,7 @@
 </body>
 
 </html>
+
 
 
 
